tests/neg-macros/newClassExtendsNoParents/Test_2.scala
//> using options -experimental -Yno-experimental

def test: Any = makeClass("foo") // error
